--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Why Choose Us? | Pike&#039;s Surf School | Santa Barbara - California</title>
+<title>Why Choose Us? | Pike&#039;s Surf School Santa Barbara - California</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="keywords" content="Best Surf School in Santa Barbara" />
 <meta name="description" content="As the Founder of Pike Surf School, I set out to create a safe & fun environment where anyone could learn how to surf" />
@@ -16,7 +16,7 @@
 <body>
 
 
-<div class="wrapper"><a href="/contact.html" class="paynow"> Pay the Instructor</a><p class="paynow"> Schedule a Lesson Now!&nbsp; <span class="greencall">Call (805) 698-7630</span> </p>
+<div class="wrapper"><a href="/contact.html" class="paynow"> Pay the Instructor</a><p class="paynow"> Schedule a Lesson Now!&nbsp;<span class="greencall">Call (805) 698-7630 or  </span> pike.schoolofstyle@yahoo.com  </p>
 <div id="templatemo_header_wrapper">
 
   <div id="templatemo_header">
@@ -56,9 +56,9 @@
 	<div id="templatemo_content2"><div id="services_content">
 <div id="lefty">
          <h1 class="marketing_header6">About Us</h1>
-         <p class="topshow"><span class="lightp">As the Founder of Pike Surf School, I set out to create a safe place where anyone could learn how to surf,</span> not just how to ride a wave or paddle (we teach that too :) but learn about what it truly means to be a surfer, from the ground up, like I did. Over the years, I've given lessons to everyone from children, teens, and adults, and the one thing I've always found to be true is that having a good firsttime surfing experience is key. But also, there is also something that keeps us all coming back for more, the drive to be a surfer. I am committed to working with your child, teen</p>
+         <p class="topshow"><span class="lightp"> I started Pike Surf School so that I could pass my love and knowledge of surfing on to this generation and the next, to anyone and everyone who is interested in learning.  My hope and dream is to inspire others, so they can connect with their sense of wonder and zest for life through surfing.</span>  Over the years, I've given lessons to everyone from children, teens, and adults - and the one thing I've always found to be true is that having a good firsttime surfing experience is key. But there is also something that keeps us all coming back for more, the drive to be a surfer. I want to share that experience.
 <h1 class="marketing_header7">Meet The Instructor</h1><div id="part4"></div>
-<p class="topshow"><span class="lightp"> James Benjamin Pike,  born on July 11th ,1985,</span>  at the Children’s Hospital in beautiful San Francisco, California.  When I came out of the womb, the doctor held me up by my feet,  looked me up and down, then handed me over to my Mother and said ” He’s going to be a skateboarder.” My Mother, in horror, covered my little ears and said ” Don’t said that!” .  The doctor reply, “Sorry, I’ve been doing this for a 40 years, I can just tell, Skater. ”   My parents were living in Fremont, California at the time, my  Mother was working at the Port of Oakland, as a Management Consultant, and it was easy for her to break away from work to cross over into San Francisco for doctor visits and eventually my birth.  My Dad was also a Management Consultant in Silicon Valley.   My Mom left her employment at the Port of Oakland and stayed home with me until the age of six-years old.  In 1992, she decided to return to her original profession:  University Associate Professor.</p>
+<p class="topshow"><span class="lightp"> James Benjamin Pike,  born on July 11th ,1985,</span>  at the Children’s Hospital in beautiful San Francisco, California.  When I came out of the womb, the doctor held me up by my feet,  looked me up and down, then handed me over to my Mother and said ” He’s going to be a skateboarder.” My Mother, in horror, covered my little ears and said ” Don’t say that!” .  The doctor reply, “Sorry, I’ve been doing this for a 40 years, I can just tell, Skater. ”   My parents were living in Fremont, California at the time, my  Mother was working at the Port of Oakland, as a Management Consultant, and it was easy for her to break away from work to cross over into San Francisco for doctor visits and eventually my birth.  My Dad was also a Management Consultant in Silicon Valley.   My Mom left her employment at the Port of Oakland and stayed home with me until the age of six-years old.  In 1992, she decided to return to her original profession:  University Associate Professor.</p>
 
 
 
@@ -72,11 +72,11 @@
 <div class="two_column float_r">
             
                 <ul class="listy">
-                    <li class="whitedes">1 on 1 personalized learning environment</li>
-                    <li class="whitedes"> Learn the In's and Outs of Surfing</li>
+                    <li class="whitedes">Safe, Fun, & enjoyable learning environment</li>
+                    <li class="whitedes"> Over 20 years experience of surf instruction experience</li>
                     <li class="whitedes">Local Experience and Committment</li>
-                    <li class="whitedes"> Safe, Fun, & enjoyable learning environment</li>
-                    <li class="whitedes"> Enjoy with groups or alone</li>
+                    <li class="whitedes">1 on 1 personalized learning environment</li>
+                    <li class="whitedes"> Yelp rated as the most fun activity in Santa Barbara</li>
                 </ul>
                 
             </div></div>
