--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 <body>
 
 
-<div class="wrapper"><a href="/contact.html" class="paynow"> Pay the Instructor</a><p class="paynow"> Schedule a Lesson Now!&nbsp; <span class="greencall">Call (805) 698-7630</span> </p>
+<div class="wrapper"><a href="/contact.html" class="paynow"> Pay the Instructor</a><p class="paynow"> Schedule a Lesson Now!&nbsp; <span class="greencall">Call (805) 698-7630 or  </span>email: pike.schoolofstyle@yahoo.com </p>
 <div id="templatemo_header_wrapper">
 
   <div id="templatemo_header">
@@ -97,6 +97,8 @@
                 Venenatis ut turpis 10410<br />
                 Tel: 805-698-7630
  <div class="cleaner_h40"></div>
+<h6>Follow the link below to pay:  </h6>
+<div class="cleaner_h40"></div>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="33RVYUHD4NFHQ">
