--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
 <body>
 
 
-<div class="wrapper"><a href="/contact.html" class="paynow"> Pay the Instructor</a><p class="paynow"> Schedule a Lesson Now!&nbsp; <span class="greencall">Call (805) 698-7630</span> </p>
+<div class="wrapper"><a href="/contact.html" class="paynow"> Pay the Instructor</a><p class="paynow"> Schedule a Lesson Now!&nbsp; <span class="greencall">Call (805) 698-7630 or  </span>pike.schoolofstyle@yahoo.com </p>
 <div id="templatemo_header_wrapper">
 
   <div id="templatemo_header">
@@ -67,7 +67,7 @@
 	
 	<a href="images/neo1.jpg" title="Right after a great session!"><img src="images/neo1.jpg" class="popyimg"></a>
 
-	<a href="images/botp.jpg" title="Girls can surf too!"><img src="images/botp.jpg" class="popyimg"></a>
+	<a href="images/botp.jpg" title="Girls showing off before their rides!"><img src="images/botp.jpg" class="popyimg"></a>
 <a href="images/zen.jpg" title="A young surfing stud in the making!"><img src="images/zen.jpg" class="popyimg"></a>
 
 
