--- a/links.html
+++ b/links.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title> Local Links | Pike&#039;s Surf N&#039; Skate</title>
+<title> Local Links | Pike&#039;s Surf Lessons Santa Barbara - California</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
 <meta name="description" content="Set up a surfing lesson today and learn how to surf with Pike!" />
@@ -16,7 +16,7 @@
 <body>
 
 
-<div class="wrapper"><a href="index.html" class="paynow"> Pay the Instructor</a><p class="paynow"> Schedule a Lesson Now!&nbsp; <span class="greencall">Call (805) 698-7630</span> </p>
+<div class="wrapper"><a href="index.html" class="paynow"> Pay the Instructor</a><p class="paynow"> Schedule a Lesson Now!&nbsp; <span class="greencall">Call (805) 698-7630 or  </span>email: pike.schoolofstyle@yahoo.com </p>
 <div id="templatemo_header_wrapper">
 
   <div id="templatemo_header">
