--- a/pricing.html
+++ b/pricing.html
@@ -16,7 +16,7 @@
 <body>
 
 
-<div class="wrapper"><a href="/contact.html" class="paynow"> Pay the Instructor</a><p class="paynow"> Schedule a Lesson Now!&nbsp; <span class="greencall">Call (805) 698-7630</span> </p>
+<div class="wrapper"><a href="/contact.html" class="paynow"> Pay the Instructor</a><p class="paynow"> Schedule a Lesson Now!&nbsp; <span class="greencall">Call (805) 698-7630 or  </span>email: pike.schoolofstyle@yahoo.com  </p>
 <div id="templatemo_header_wrapper">
 
   <div id="templatemo_header">
@@ -57,10 +57,10 @@
 
 
 <h1 class="marketing_header22">Pricing / Info:</h1>
- <p id="test1"><span class="lightp">All surfing lessons are taught at Mondo’s Cove, a safe & friendly surfing beach just a short distance 10 minutes on the southern end of Santa Barbara and 12 minutes north of Ventura.</span> 
+ <p id="test1"><span class="lightp">All surfing lessons are taught at Mondo’s Cove, a safe & friendly surfing beach just a short distance 10 minutes on the southern end of Santa Barbara and 12 minutes north of Ventura.</span> Please see below for directions and for more information.  </p>
 <div class="two_column7 float_l"><h1 class="righttitle2">Single </h1>
               <h4 class="pricedes">A Single Lesson!</h3> 
-<h4 class="priceshow"><b>Price: $100 (per person)</b> <span class="includes">Includes:</span></h4> 
+<h4 class="priceshow"><b><span class="whiteprice">Price:</span> $100 (per person)</b> <span class="includes">Includes:</span></h4> 
 <ul>
                     <li class="whitedes"> Wetsuit</li>
                     <li class="whitedes"> Surfboard</li>
@@ -72,8 +72,8 @@
           </div>
  <div class="two_column8 float_l">
             <h1 class="righttitle3">Double</h1>
-<h4 class="pricedes">A Double Lesson! </h3>
-<h4 class="priceshow"><b>Price: $160</b> ($80 per person) <span class="includes">Includes:</span></h3>
+<h4 class="pricedes">A Lesson For Two! </h3>
+<h4 class="priceshow"><b><span class="whiteprice">Price:</span> $160</b> ($80 per person) <span class="includes">Includes:</span></h3>
                 <ul>
                     <li class="whitedes"> Wetsuit</li>
                     <li class="whitedes"> Surfboard</li>
@@ -92,7 +92,7 @@
 <div class="two_column7 float_l">
             <h1 class="righttitle4">Three or more</h1>
 <h4 class="pricedes">A Group Lesson! </h3>
-<h4 class="priceshow"><b>Price: $210</b> ($70 per person) <span class="includes">Includes:</span></h3>
+<h4 class="priceshow"><b><span class="whiteprice">Price:</span> $210</b> ($70 per person) <span class="includes">Includes:</span></h3>
                 <ul>
                     <li class="whitedes"> Wetsuit</li>
                     <li class="whitedes"> Surfboard</li>
@@ -106,7 +106,7 @@
 <div class="two_column8 float_l">
             <h1 class="righttitle4">Four or more</h1>
 <h4 class="pricedes">4 or more! </h3>
-<h4 class="priceshow"><b>Price: $240 </b>($60 per person) <span class="includes">Includes:</span></h3>
+<h4 class="priceshow"><b><span class="whiteprice">Price:</span> $240 </b>($60 per person) <span class="includes">Includes:</span></h3>
                 <ul>
                     <li class="whitedes"> Wetsuit</li>
                     <li class="whitedes"> Surfboard</li>
@@ -118,7 +118,7 @@
             </div>
     	
 
-         <p id="test1"><span class="lightp">All surfing lessons are taught at Mondo’s Cove, a safe & friendly surfing beach just a short & friendly distance 10 minutes on the southern end of Santa Barbara and 12 minutes north of Ventura.</span>  <br /> <br /><span class="greenp"> Directions from Santa Barbara:</span> If your coming from SB, take 101South then drive past Capinteria and take the Seacliff exit ( Exit 78).  Make a right at the stop sign, drive for 10 minutes south, you will past two state parks (Hobsons and Faria).  After you past the Faria State Park, you will park at the beginning of the w 500 yard gap in between the houses is, it comes up quickly after Faria State park,  this is Mondos Cove.  The meeting spot is the where the gap begins (west end), please pull safely to the middle of the highway and find parking on the left side of the road next to the railroad tracks.  Please be very careful for traffic and bicyclist when crossing the road.
+         <p id="test1"><span class="greenp"> Directions from Santa Barbara:</span> If your coming from SB, take 101South then drive past Capinteria and take the Seacliff exit ( Exit 78).  Make a right at the stop sign, drive for 10 minutes south, you will past two state parks (Hobsons and Faria).  After you past the Faria State Park, you will park at the beginning of the w 500 yard gap in between the houses is, it comes up quickly after Faria State park,  this is Mondos Cove.  The meeting spot is the where the gap begins (west end), please pull safely to the middle of the highway and find parking on the left side of the road next to the railroad tracks.  Please be very careful for traffic and bicyclist when crossing the road.
 
 <br /> <br /><span class="greenp"> Directions from Ventura:</span>If your coming for Ventura way, take the State Beach exit after you past Ventura, do not miss it. Drive 5 minutes north, you will past Solimar state beach and then look for the 300 yard gap in between the houses.  This is Mondos Cove and the meeting spot is the west end of the gap, please park safely on the right hand side of the highway next to the railroad tracks.
 <br /> <br /><span class="bringp">Things to bring:</span> Wear your bathing suit under your clothes before you get to the beach and bring a towel, sun glasses, hat and sunblock (recommended Badger surf screen, can be brought at Whole Foods).  Please call or email the night before your lesson to confirm.  When it’s time to meet up at Mondo’s Cove and you are at the meeting spot, please give us a call to help you find your surf lesson quickly.</p>
