--- a/home.html
+++ b/home.html
@@ -34,7 +34,11 @@
 }(document, 'script', 'facebook-jssdk'));</script>
 
 
-<div class="wrapper"><a href="contact.html" class="paynow"> Pay the Instructor</a><p class="paynow"> Schedule a Lesson Now!&nbsp; <span class="greencall">Call (805) 698-7630</span></p>
+<div class="wrapper">
+
+<div id="toppie"><a href="contact.html" class="paynow"> Pay the Instructor</a><p class="paynow"> Schedule a Lesson Now!&nbsp; <span class="greencall">Call (805) 698-7630 or  </span> pike.schoolofstyle@yahoo.com  </p></div>
+
+
 <div id="templatemo_header_wrapper">
 
   <div id="templatemo_header">
@@ -75,7 +79,7 @@
 	<div id="templatemo_content1">
 
 <div id="site_title">
-      <h1>Santa Barbara's <span id="standout">Premier</span> Surf Lessons</h1>
+      <h1>Santa Barbara's <span id="standout">Premier</span> Surf Lessons.</h1>
     </div>
 <div class="site_marketing_first">
       <h1>Learn from an <span class="standout2">accomplished&nbsp;</span> surf instructor with over <span class="standout2"> 20 years experience!</span></h1>
