--- a/pricing.html
+++ b/pricing.html
@@ -16,7 +16,7 @@
 <body>
 
 
-<div class="wrapper"><a href="/contact.html" class="paynow"> Pay the Instructor</a><p class="paynow"> Schedule a Lesson Now!&nbsp; <span class="greencall">Call (805) 698-7630 or  </span>email: pike.schoolofstyle@yahoo.com  </p>
+<div class="wrapper"><div id="toppie"> <a href="contact.html" class="paynow"> Pay the Instructor</a><p class="paynow"> Schedule a Lesson Now!&nbsp; <span class="greencall">Call (805) 698-7630 or  </span> pike.schoolofstyle@yahoo.com  </p></div>
 <div id="templatemo_header_wrapper">
 
   <div id="templatemo_header">
@@ -29,7 +29,7 @@
             <li><a href="about.html" >About</a></li>
             <li><a href="lessons.html" >Lessons</a></li><li><a href="gallery.html" >Photos</a></li>
             <li><a href="pricing.html" class="current">Pricing</a></li>
-
+<li><a href="links.html">Links</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>    	
     
