--- a/home.html
+++ b/home.html
@@ -36,13 +36,13 @@
 
 <div class="wrapper">
 
-<div id="toppie"><a href="contact.html" class="paynow"> Pay the Instructor</a><p class="paynow"> Schedule a Lesson Now!&nbsp; <span class="greencall">Call (805) 698-7630 or  </span> pike.schoolofstyle@yahoo.com  </p></div>
+<div id="toppie"> <a href="contact.html" class="paynow"> Pay the Instructor</a><p class="paynow"> Schedule a Lesson Now!&nbsp; <span class="greencall">Call (805) 698-7630 or  </span> pike.schoolofstyle@yahoo.com  </p></div>
 
 
 <div id="templatemo_header_wrapper">
 
   <div id="templatemo_header">
-<div id="templatemo_menu_wrapper"><a href="/index.html"><img src="/images/pikelogs.png" alt="logo"  id="companylogo"/></a>
+<div id="templatemo_menu_wrapper"><a href="/index.html"><img src="/images/pikesurflogo.png" alt="logo"  id="companylogo"/></a>
 
     <div id="templatemo_menu">
     
@@ -51,6 +51,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="lessons.html">Lessons</a></li><li><a href="gallery.html">Photos</a></li>
             <li><a href="pricing.html">Pricing</a></li>
+<li><a href="links.html">Links</a></li>
 
             <li><a href="contact.html">Contact</a></li>
         </ul>    	
@@ -75,7 +76,7 @@
 
 
 
-<div id="templatemo_content_wrapper"><img src="/images/lp.jpg" alt="logo"  id="about_background2"/>
+<div id="templatemo_content_wrapper"><img src="/images/cc7.jpg" alt="logo"  id="about_background2"/>
 	<div id="templatemo_content1">
 
 <div id="site_title">
