--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Contact Us! | Pike&#039;s Surf School | Santa Barbara - California</title>
+<title>Contact Us! | Pike&#039;s Surf School Santa Barbara - California</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="keywords" content="Contact Pike Surf School, Pay Instructor" />
 <meta name="description" content="Set up a surfing lesson today and learn how to surf with Pike!" />
@@ -93,8 +93,8 @@
 <div class="two_column float_r">
             
            		<h6>Pike Surf School Address </h6>
-                180-370 Quisque odio quam, <br />
-                Venenatis ut turpis 10410<br />
+                1117 Las Olas Ave,<br />
+                Santa Barbara, CA 93019<br />
                 Tel: 805-698-7630
  <div class="cleaner_h40"></div>
 <h6>Follow the link below to pay:  </h6>
@@ -135,6 +135,7 @@
 
 <div id="templatemo_copyright_wrapper">
 	<div id="templatemo_copyright">
+
 <ul id="sitemap">
 <li class="sitelinks"><a href="index.html" class="linkies">Home</a></li>
 <li class="sitelinks"><a href="about.html" class="linkies">About</a></li>
@@ -142,7 +143,9 @@
 <li class="sitelinks"><a href="gallery.html" class="linkies">Photos</a></li>
 <li class="sitelinks"><a href="contact.html" class="linkies">Contact</a></li>
 <li class="sitelinks"><a href="links.html" class="linkies">Links</a></li>
-</ul>Copyright © 2014 <a href="#">Pike Surf School</a> Enjoy Life. Go Surfing! <a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a>
+</ul>
+
+<div class="sitemap">Copyright © 2014&nbsp; <a href="#">&nbsp;Pike Surf School&nbsp;</a><a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a></div>
 
         
     </div> <!-- end of templatemo_copyright -->
