--- a/gallery.html
+++ b/gallery.html
@@ -21,13 +21,22 @@
 </head>
 
 <body>
+<script>(function() { var s = document.createElement("script");s.async = true;s.onload = s.onreadystatechange = function(){getYelpWidget("pikes-surf-school-santa-barbara","300","YLW","y","y","0");};s.src='http://chrisawren.com/widgets/yelp/yelpv2.js' ;var x = document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s, x);})();</script>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
 
 <div class="wrapper"><div id="toppie"> <a href="contact.html" class="paynow"> Pay the Instructor</a><p class="paynow"> Schedule a Lesson Now!&nbsp; <span class="greencall">Call (805) 698-7630 or  </span> pike.schoolofstyle@yahoo.com  </p></div>
 <div id="templatemo_header_wrapper">
 
   <div id="templatemo_header">
-<div id="templatemo_menu_wrapper"><a href="/index.html"><img src="/images/pikelogs.png" alt="logo"  id="companylogo"/></a>
+<div id="templatemo_menu_wrapper"><a href="/index.html"><img src="/images/pikesurflogo.png" alt="logo"  id="companylogo"/></a>
 
     <div id="templatemo_menu">
     
@@ -62,6 +71,7 @@
 <div id="templatemo_content_wrapper"><img src="/images/cc7.jpg" alt="logo"  id="about_background3"/>
 	<div id="templatemo_content69">
  <h1 class="marketing_header9">Lesson Photos :)</h1>
+<p id="test2"><span class="lightp">All surfing lessons are taught at Mondo’s Cove, a safe & friendly surfing beach just a short distance 10 minutes on the southern end of Santa Barbara and 12 minutes north of Ventura.</span> Please see below for directions and for more information.  </p>
 <div id="imagegroup">
 		<div class="popup-gallery">
 	
@@ -117,6 +127,12 @@
     	<div class="cleaner"></div>
 	</div> <!-- end of content -->
 </div> <!-- end of content_wrapper -->
+
+<div id="photo_wrapper">
+
+    	<div id="egospace"><div class="fb-like-box" data-href="https://www.facebook.com/pages/Pikes-Surf-N-Sk8/210572495666457" data-colorscheme="dark" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div><div id='yelpwidget'></div>
+       </div>
+</div>
 <div id="content_filler7">
 <div id="surfrincon">
 
@@ -126,6 +142,7 @@
 
 <div id="templatemo_copyright_wrapper">
 	<div id="templatemo_copyright">
+
 <ul id="sitemap">
 <li class="sitelinks"><a href="index.html" class="linkies">Home</a></li>
 <li class="sitelinks"><a href="about.html" class="linkies">About</a></li>
@@ -134,7 +151,8 @@
 <li class="sitelinks"><a href="contact.html" class="linkies">Contact</a></li>
 <li class="sitelinks"><a href="links.html" class="linkies">Links</a></li>
 </ul>
-Copyright © 2014 <a href="#">Pike Surf School</a> Enjoy Life. Go Surfing! <a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a>
+
+<div class="sitemap">Copyright © 2014&nbsp; <a href="#">&nbsp;Pike Surf School&nbsp;</a><a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a></div>
 
         
     </div> <!-- end of templatemo_copyright -->
