--- a/lessons.html
+++ b/lessons.html
@@ -96,7 +96,9 @@ Surf lessons can be set up by phone (805-698-7630) or email (contact@pikesurfsch
 
 <div id="templatemo_copyright_wrapper">
 	<div id="templatemo_copyright">
+<div class="sitemap">Copyright © 2014&nbsp; <a href="#">&nbsp;Pike Surf School&nbsp;</a><a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a></div>
 
+<div class="cleaner"></div>
 <ul id="sitemap">
 <li class="sitelinks"><a href="index.html" class="linkies">Home</a></li>
 <li class="sitelinks"><a href="about.html" class="linkies">About</a></li>
@@ -106,7 +108,7 @@ Surf lessons can be set up by phone (805-698-7630) or email (contact@pikesurfsch
 <li class="sitelinks"><a href="links.html" class="linkies">Links</a></li>
 </ul>
 
-<div class="sitemap">Copyright © 2014&nbsp; <a href="#">&nbsp;Pike Surf School&nbsp;</a><a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a></div>
+
 
         
     </div> <!-- end of templatemo_copyright -->
