--- a/about.html
+++ b/about.html
@@ -119,7 +119,9 @@ I worked with the Santa Barbara Seals Surf School teaching surf lessons, coachin
 
 <div id="templatemo_copyright_wrapper">
 	<div id="templatemo_copyright">
+<div class="sitemap">Copyright © 2014&nbsp; <a href="#">&nbsp;Pike Surf School&nbsp;</a><a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a></div>
 
+<div class="cleaner"></div>
 <ul id="sitemap">
 <li class="sitelinks"><a href="index.html" class="linkies">Home</a></li>
 <li class="sitelinks"><a href="about.html" class="linkies">About</a></li>
@@ -129,11 +131,10 @@ I worked with the Santa Barbara Seals Surf School teaching surf lessons, coachin
 <li class="sitelinks"><a href="links.html" class="linkies">Links</a></li>
 </ul>
 
-<div class="sitemap">Copyright © 2014&nbsp; <a href="#">&nbsp;Pike Surf School&nbsp;</a><a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a></div>
+
 
         
     </div> <!-- end of templatemo_copyright -->
 </div> <!-- end of copyright wrapper -->
-
 <div align=center></div></body>
 </html>
