--- a/gallery.html
+++ b/gallery.html
@@ -142,7 +142,9 @@
 
 <div id="templatemo_copyright_wrapper">
 	<div id="templatemo_copyright">
+<div class="sitemap">Copyright © 2014&nbsp; <a href="#">&nbsp;Pike Surf School&nbsp;</a><a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a></div>
 
+<div class="cleaner"></div>
 <ul id="sitemap">
 <li class="sitelinks"><a href="index.html" class="linkies">Home</a></li>
 <li class="sitelinks"><a href="about.html" class="linkies">About</a></li>
@@ -152,7 +154,7 @@
 <li class="sitelinks"><a href="links.html" class="linkies">Links</a></li>
 </ul>
 
-<div class="sitemap">Copyright © 2014&nbsp; <a href="#">&nbsp;Pike Surf School&nbsp;</a><a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a></div>
+
 
         
     </div> <!-- end of templatemo_copyright -->
