--- a/pricing.html
+++ b/pricing.html
@@ -152,8 +152,10 @@
 <li class="sitelinks"><a href="about.html" class="linkies">About</a></li>
 <li class="sitelinks"><a href="lessons.html" class="linkies">Lessons</a></li>
 <li class="sitelinks"><a href="gallery.html" class="linkies">Photos</a></li>
-<li class="sitelinks"><a href="contact.html" class="linkies">Contact</a></li>
+
+<li class="sitelinks"><a href="pricing.html" class="linkies">Pricing</a></li>
 <li class="sitelinks"><a href="links.html" class="linkies">Links</a></li>
+<li class="sitelinks"><a href="contact.html" class="linkies">Contact</a></li>
 </ul>
 
 
