--- a/about.html
+++ b/about.html
@@ -127,8 +127,10 @@ I worked with the Santa Barbara Seals Surf School teaching surf lessons, coachin
 <li class="sitelinks"><a href="about.html" class="linkies">About</a></li>
 <li class="sitelinks"><a href="lessons.html" class="linkies">Lessons</a></li>
 <li class="sitelinks"><a href="gallery.html" class="linkies">Photos</a></li>
-<li class="sitelinks"><a href="contact.html" class="linkies">Contact</a></li>
+
+<li class="sitelinks"><a href="pricing.html" class="linkies">Pricing</a></li>
 <li class="sitelinks"><a href="links.html" class="linkies">Links</a></li>
+<li class="sitelinks"><a href="contact.html" class="linkies">Contact</a></li>
 </ul>
 
 
