--- a/lessons.html
+++ b/lessons.html
@@ -104,8 +104,10 @@ Surf lessons can be set up by phone (805-698-7630) or email (contact@pikesurfsch
 <li class="sitelinks"><a href="about.html" class="linkies">About</a></li>
 <li class="sitelinks"><a href="lessons.html" class="linkies">Lessons</a></li>
 <li class="sitelinks"><a href="gallery.html" class="linkies">Photos</a></li>
-<li class="sitelinks"><a href="contact.html" class="linkies">Contact</a></li>
+
+<li class="sitelinks"><a href="pricing.html" class="linkies">Pricing</a></li>
 <li class="sitelinks"><a href="links.html" class="linkies">Links</a></li>
+<li class="sitelinks"><a href="contact.html" class="linkies">Contact</a></li>
 </ul>
 
 
