--- a/home.html
+++ b/home.html
@@ -119,7 +119,7 @@
         </div>
 <div class="top_row_box last"><img src="/images/couples.jpg" alt="Pike Surf School" id="pikesurfimage1"  >
         	<div class="blackbox"><h5 class="bluetitle"><span class="firststand">Enjoy</span> Together in groups!</h5>
-          <p><span class="bluep">Experience surfing together with a few of your closest friends.</span> Enjoy your first surf learning experience together in beautiful Santa Barbara.  </p>
+          <p><span class="bluep">Experience surfing together with a few of your</span> closest friends. Enjoy your first surf learning experience together in beautiful Santa Barbara.  </p>
             <div><a class="button" href="/about.html">Find Out More!</a></div>
 	  </div>
 
@@ -178,17 +178,21 @@
 
 <div id="templatemo_copyright_wrapper">
 	<div id="templatemo_copyright">
+<div class="sitemap">Copyright © 2014&nbsp; <a href="#">&nbsp;Pike Surf School&nbsp;</a><a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a></div>
 
+<div class="cleaner"></div>
 <ul id="sitemap">
 <li class="sitelinks"><a href="index.html" class="linkies">Home</a></li>
 <li class="sitelinks"><a href="about.html" class="linkies">About</a></li>
 <li class="sitelinks"><a href="lessons.html" class="linkies">Lessons</a></li>
 <li class="sitelinks"><a href="gallery.html" class="linkies">Photos</a></li>
-<li class="sitelinks"><a href="contact.html" class="linkies">Contact</a></li>
+
+<li class="sitelinks"><a href="pricing.html" class="linkies">Pricing</a></li>
 <li class="sitelinks"><a href="links.html" class="linkies">Links</a></li>
+<li class="sitelinks"><a href="contact.html" class="linkies">Contact</a></li>
 </ul>
 
-<div class="sitemap">Copyright © 2014&nbsp; <a href="#">&nbsp;Pike Surf School&nbsp;</a><a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a></div>
+
 
         
     </div> <!-- end of templatemo_copyright -->
