--- a/lessons.html
+++ b/lessons.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="keywords" content="Santa Barbara Surfing, learn to surf" />
 <meta name="description" content="James Pike has been teaching surfing lessons for over 12 years and is both CPR and First Aid Certified." />
-<meta name="viewport" content="width=1351">
+<meta name="viewport" content="width=1351, initial-scale=1">
 <link rel="icon" href="/ico/pike_surf_favicon.ico" type="image/x-icon">
 <link href="css/templatemo_style.css" rel="stylesheet" type="text/css" />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -71,11 +71,12 @@
     	
 <div id="righty">
          <h1 class="marketing_header19">About Lessons</h1>
-         <p class="topshow7"><span class="lightp">James Pike has been teaching surfing lessons for over 12 years and is CPR and First Aid Certified.</span>   Pike’s Surf Academy offers a friendly and fun setting to learn how to surf, so that anyone who lives in town or is passing thru, has a wonderful surfing experience.  This is a sport ANYONE and EVERYONE ages ( 4-77+ ).  This is your opportunity of a life time to learn how to ride a surfboard with style, in a comfortable setting with an expert.  Give the gift of surfing to yourself and your whole family, so everyone is involved and having fun!  Set up a surfing lesson today and learn how to surf with Pike!</p>
+         <p class="topshow7"><span class="lightp">James Pike has been teaching surfing lessons for over 12 years and is CPR and First Aid Certified.</span>   Pike’s Surf Academy offers a friendly and fun setting to learn how to surf, so that anyone who lives in town or is passing thru, has a wonderful surfing experience.  This is a sport ANYONE and EVERYONE ages ( 4-77+ ) who has the call to try it.  This is your opportunity of a life time to learn how to ride a surfboard with style, in a comfortable setting and in the company of an expert.  Give the gift of surfing to yourself and your loved ones, and enjoy your first-time experience together!  Set up a surfing lesson today and learn how to surf with Pike!</p>
 <h1 class="marketing_header2">Lesson Information:</h1>
 <p class="topshow7"><span class="lightp">Each private surfing lesson are 120 minutes (2 hours) long and includes:</span> wetsuits, surfboards with surfing leash and 1 0n 1, personalized learning environment with surfing instructor James Pike.
 Surf lessons can be set up by phone (805-698-7630) or email (contact@pikesurfschool.com).  Please include your full name and the height’s and weight’s for the people in the surf lesson, as well as a good time and date that works for you. Pike’s Surf School accepts for payment of Cash and Checks (Please make checks payable to “Pike’s Surf School”).</p>
-
+<h1 class="marketing_header2">Locations:</h1>
+<p class="topshow7"><span class="brightp">We currently offer surf lessons at the following two locations: Santa Barbara and Santa Cruz,</span> California. To book a surf lesson at any of these locations, please call (805-698-7630) or email pike.schoolofstyle@yahoo.com </p>
 
     </div>
     	<div class="cleaner"></div>
@@ -96,7 +97,7 @@ Surf lessons can be set up by phone (805-698-7630) or email (contact@pikesurfsch
 
 <div id="templatemo_copyright_wrapper">
 	<div id="templatemo_copyright">
-<div class="sitemap">Copyright © 2014&nbsp; <a href="#">&nbsp;Pike Surf School&nbsp;</a><a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a></div>
+<div class="sitemap">Copyright © 2014&nbsp; <a href="#">&nbsp;Pike Surf Academy&nbsp;</a><a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a></div>
 
 <div class="cleaner"></div>
 <ul id="sitemap">
