--- a/links.html
+++ b/links.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
 <meta name="description" content="Set up a surfing lesson today and learn how to surf with Pike!" />
-<meta name="viewport" content="width=1351">
+<meta name="viewport" content="width=1351, initial-scale=1">
 <link rel="icon" href="/ico/pike_surf_favicon.ico" type="image/x-icon">
 <link href="css/templatemo_style.css" rel="stylesheet" type="text/css" />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -251,9 +251,9 @@
 			<p>&nbsp;</p>
 <div class="two_column float_r">
             
-           		<h6>Pike Surf School Address </h6>
-                1117 Las Olas Ave,<br />
-                Santa Barbara, CA 93019<br />
+           		<h6>Pike Surf Academy Address </h6>
+                440 Por La Mar Dr<br />
+                Santa Barbara, CA 93103<br />
                 Tel: 805-698-7630
                 
         <div class="cleaner_h40"></div>
@@ -290,7 +290,7 @@
 
 <div id="templatemo_copyright_wrapper">
 	<div id="templatemo_copyright">
-<div class="sitemap">Copyright © 2014&nbsp; <a href="#">&nbsp;Pike Surf School&nbsp;</a><a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a></div>
+<div class="sitemap">Copyright © 2014&nbsp; <a href="#">&nbsp;Pike Surf Academy&nbsp;</a><a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a></div>
 
 <div class="cleaner"></div>
 <ul id="sitemap">
