--- a/gallery.html
+++ b/gallery.html
@@ -71,7 +71,7 @@
 <div id="templatemo_content_wrapper"><img src="/images/cc7.jpg" alt="logo"  id="about_background3"/>
 	<div id="templatemo_content69">
  <h1 class="marketing_header9">Lesson Photos :)</h1>
-<p id="test2"><span class="lightp">All surfing lessons are taught at Mondo’s Cove, a safe & friendly surfing beach just a short distance 10 minutes on the southern end of Santa Barbara and 12 minutes north of Ventura.</span> Please see below for directions and for more information.  </p>
+<p id="test2"><span class="brightp">Below are some photos taken during surf lessons in Santa Barbara & Santa Cruz, California. Feel free to check</span> them out and remember! It could soon be YOU riding your first wave and posing in one of these photos! :)   </p>
 <div id="imagegroup">
 		<div class="popup-gallery">
 	
@@ -142,7 +142,7 @@
 
 <div id="templatemo_copyright_wrapper">
 	<div id="templatemo_copyright">
-<div class="sitemap">Copyright © 2014&nbsp; <a href="#">&nbsp;Pike Surf School&nbsp;</a><a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a></div>
+<div class="sitemap">Copyright © 2014&nbsp; <a href="#">&nbsp;Pike Surf Academy&nbsp;</a><a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a></div>
 
 <div class="cleaner"></div>
 <ul id="sitemap">
