--- a/pricing.html
+++ b/pricing.html
@@ -4,9 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Surf Lesson Prices | Santa Barbara - California | Pike&#039;s Surf School</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-<meta name="keywords" content="Surf lesson prices, best group rates, invividual surf lessons, surf instruction santa barbara" />
+<meta name="keywords" content="Surf lesson prices, best group surf lesson rates, invividual surf lessons, surf instruction santa barbara, surf instruction santa cruz" />
 <meta name="description" content="Pike's Surf School is a fun, friendly, and safe place to learn how to surf from an experienced industry professional" />
-<meta name="viewport" content="width=1351">
+<meta name="viewport" content="width=1351, initial-scale=1">
 <link rel="icon" href="/ico/pike_surf_favicon.ico" type="image/x-icon">
 <link href="css/templatemo_style.css" rel="stylesheet" type="text/css" />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -122,7 +122,7 @@
 <div id="directions"><h1 class="marketing_header26">Directions:</h1>
 <p id="test1"><span class="greenp"> Directions from Santa Barbara:</span> If your coming from SB, take 101South then drive past Capinteria and take the Seacliff exit ( Exit 78).  Make a right at the stop sign, drive for 10 minutes south, you will past two state parks (Hobsons and Faria).  After you past the Faria State Park, you will park at the beginning of the w 500 yard gap in between the houses is, it comes up quickly after Faria State park,  this is Mondos Cove.  The meeting spot is the where the gap begins (west end), please pull safely to the middle of the highway and find parking on the left side of the road next to the railroad tracks.  Please be very careful for traffic and bicyclist when crossing the road.
 
-<br /> <br /><span class="greenp"> Directions from Ventura:</span>If your coming for Ventura way, take the State Beach exit after you past Ventura, do not miss it. Drive 5 minutes north, you will past Solimar state beach and then look for the 300 yard gap in between the houses.  This is Mondos Cove and the meeting spot is the west end of the gap, please park safely on the right hand side of the highway next to the railroad tracks.
+<br /> <br /><span class="greenp"> Directions from Ventura:</span> If your coming for Ventura way, take the State Beach exit after you past Ventura, do not miss it. Drive 5 minutes north, you will past Solimar state beach and then look for the 300 yard gap in between the houses.  This is Mondos Cove and the meeting spot is the west end of the gap, please park safely on the right hand side of the highway next to the railroad tracks.
 <br /> <br /><span class="bringp">Things to bring:</span> Wear your bathing suit under your clothes before you get to the beach and bring a towel, sun glasses, hat and sunblock (recommended Badger surf screen, can be brought at Whole Foods).  Please call or email the night before your lesson to confirm.  When it’s time to meet up at Mondo’s Cove and you are at the meeting spot, please give us a call to help you find your surf lesson quickly.</p>
 </div>
 
@@ -144,7 +144,7 @@
 
 <div id="templatemo_copyright_wrapper">
 	<div id="templatemo_copyright">
-<div class="sitemap">Copyright © 2014&nbsp; <a href="#">&nbsp;Pike Surf School&nbsp;</a><a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a></div>
+<div class="sitemap">Copyright © 2014&nbsp; <a href="#">&nbsp;Pike Surf Academy&nbsp;</a><a class="greenlinked" href="/links.html">&nbsp;Check the Surf!&nbsp;</a></div>
 
 <div class="cleaner"></div>
 <ul id="sitemap">
