--- a/pricing.html
+++ b/pricing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Surf Lesson Prices | Santa Barbara - California | Pike&#039;s Surf School</title>
+<title>Pricing & Packages | Pike&#039;s Surf School | Santa Barbara & Santa Cruz - California </title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="keywords" content="Surf lesson prices, best group surf lesson rates, invividual surf lessons, surf instruction santa barbara, surf instruction santa cruz" />
 <meta name="description" content="Pike's Surf School is a fun, friendly, and safe place to learn how to surf from an experienced industry professional" />
