--- a/links.html
+++ b/links.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title> Local Links | Pike&#039;s Surf Lessons Santa Barbara - California</title>
+<title> Local Links | Pike&#039;s Surf Lessons | Santa Barbara & Santa Cruz - California</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
 <meta name="description" content="Set up a surfing lesson today and learn how to surf with Pike!" />
