--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="keywords" content="learn to surf santa barbara, surf lessons santa barbara, surf lessons santa cruz, surfing lessons santa barbara, surfing lessons santa cruz, surf vacation santa barbara, Santa Barbara surf lessons, Santa Barbara surf resort, santa barbara surf school, santa barbara surfing, learn to surf santa cruz" />
 <meta name="description" content="Give the gift of surfing to yourself and your whole family, in a fun, safe, and beautiful environment!" />
-<meta name="viewport" content="width=1351, initial-scale=1">
+<meta name="viewport" content="width=1351">
 <link rel="icon" href="/ico/pike_surf_favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="css/magnific-popup.css"> 
 <link href="css/templatemo_style.css" rel="stylesheet" type="text/css" />
