--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="keywords" content="Best Surf School in Santa Barbara" />
 <meta name="description" content="As the Founder of Pike Surf School, I set out to create a safe & fun environment where anyone could learn how to surf" />
-<meta name="viewport" content="width=1351, initial-scale=1">
+<meta name="viewport" content="width=1351">
 <link rel="icon" href="/ico/pike_surf_favicon.ico" type="image/x-icon">
 <link href="css/templatemo_style.css" rel="stylesheet" type="text/css" />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
