--- a/lessons.html
+++ b/lessons.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="keywords" content="Santa Barbara Surfing, learn to surf" />
 <meta name="description" content="James Pike has been teaching surfing lessons for over 12 years and is both CPR and First Aid Certified." />
-<meta name="viewport" content="width=1351, initial-scale=1">
+<meta name="viewport" content="width=1351">
 <link rel="icon" href="/ico/pike_surf_favicon.ico" type="image/x-icon">
 <link href="css/templatemo_style.css" rel="stylesheet" type="text/css" />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
