--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>  Welcome | Pike&#039;s Surf School Santa Barbara & Santa Cruz - California</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="keywords" content="learn to surf santa barbara, surf lessons santa barbara, surf lessons santa cruz, surfing lessons santa barbara, surfing lessons santa cruz, surf vacation santa barbara, Santa Barbara surf lessons, Santa Barbara surf resort, santa barbara surf school, santa barbara surfing, learn to surf santa cruz" />
-<meta name="description" content="Give the gift of surfing to yourself and your whole family, in a fun, safe, and beautiful environment!" />
+<meta name="description" content="Give the gift of surf lessons in Santa Barbara and Santa Cruz California to yourself and your whole family, in a fun, safe, and beautiful environment!" />
 <meta name="viewport" content="width=1351">
 <link rel="icon" href="/ico/pike_surf_favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="css/magnific-popup.css"> 
@@ -107,19 +107,19 @@
 	<div id="templatemo_top_row">
     <div class="top_row_box"><img src="/images/ps.jpg" alt="Pike Surf School" id="pikesurfimage1" >
         	<div class="blackbox"><h5 class="bluetitle"><span class="firststand">Experience </span>Surfing for the first time!</h5>
-            <p><span class="brightp">Learn firsthand what it truly means to be a surfer. </span> We teach so much more than just <span class="italix">how</span> to stand up or <span class="italix">how</span> to paddle, but also, appreciating what it truly takes be a surfer, from the ground up.  </p>
+            <p><span class="lightp">Learn firsthand what it truly means to be a surfer. </span> We teach so much more than just <span class="italix">how</span> to stand up or <span class="italix">how</span> to paddle, but also, appreciating what it truly takes be a surfer, from the ground up.  </p>
             <div ><a class="button" href="/about.html">Find Out More!</a></div></div>
         </div>
 
 <div class="top_row_box"><img src="/images/ch1.jpg" alt="Pike Surf School" id="pikesurfimage1"  >
         	<div class="blackbox"><h5 class="bluetitle"><span class="firststand">Learn</span> With the family & kids!</h5>
-            <p><span class="brightp">Perfect for kids (age 10 and younger) and youth</span> (ages 15 and under) or teens who are eager to jump into the sport of surfing in Santa Barbara or Santa Cruz, CA. We offer you a safe, fun, and enjoyable learning experience. </p>
+            <p><span class="lightp">Perfect for kids (age 10 and younger) and youth</span> (ages 15 and under) or teens who are eager to jump into the sport of surfing in Santa Barbara or Santa Cruz, CA. We offer you a safe, fun, and enjoyable learning experience. </p>
             <div><a class="button" href="/about.html">Find Out More!</a></div></div>
         
         </div>
 <div class="top_row_box last"><img src="/images/couples.jpg" alt="Pike Surf School" id="pikesurfimage1"  >
         	<div class="blackbox"><h5 class="bluetitle"><span class="firststand">Enjoy</span> Together in groups!</h5>
-          <p><span class="brightp">Experience surfing together with a few of your</span> closest friends. Enjoy your first surf learning experience together in Santa Barbara or Santa Cruz California. Give yourself or your loved ones the beautiful gift of <span class="italix">learning how to surf</span>. </p>
+          <p><span class="lightp">Experience surfing together with a few of your</span> closest friends. Enjoy your first surf learning experience together in Santa Barbara or Santa Cruz California. Give yourself or your loved ones the beautiful gift of <span class="italix">learning how to surf</span>. </p>
             <div><a class="button" href="/about.html">Find Out More!</a></div>
 	  </div>
 
