--- a/pricing.html
+++ b/pricing.html
@@ -20,7 +20,7 @@
 <div id="templatemo_header_wrapper">
 
   <div id="templatemo_header">
-<div id="templatemo_menu_wrapper"><a href="/index.html"><img src="/images/pikesurflogo.png" alt="logo"  id="companylogo"/></a>
+<div id="templatemo_menu_wrapper"><a href="/index.html"><img src="/images/logo23.png" alt="logo"  id="companylogo"/></a>
 
     <div id="templatemo_menu">
     
@@ -57,7 +57,8 @@
 
 
 <h1 class="marketing_header22">Pricing / Info:</h1>
- <p id="test1"><span class="lightp">All surfing lessons are taught at Mondo’s Cove, a safe & friendly surfing beach just a short distance 10 minutes on</span> the southern end of Santa Barbara and 12 minutes north of Ventura. First time lessons are 2 hours (120 minutes) long. Repeat lessons and additional time at request. Please see below for directions.  </p>
+ <p id="test1"><span class="lightp">All lessons for the Santa Barbara location are taught</span> at Mondo’s Cove, a safe & friendly surfing beach just a short distance (10 minutes) from the southern end of Santa Barbara and just 12 minutes north of Ventura.<br /><br /> <span class="lightp">&nbsp;&nbsp;All lessons for the Santa Cruz location are taught</span> at a safe and friendly surf beach near Pleasure Point at the end of 41st street and Capatolla. <br /><br /> First time lessons are 2 hours (120 minutes) in length. Prices below reflect first-time lesson prices: Repeat lessons and additional time at request <span class="lightp">and prices for repeat lessons are 50% the rate of first-time lessons.</span>  </p>
+
 <div class="two_column7 float_l"><h1 class="righttitle2">Single </h1>
               <h4 class="pricedes">A Single Lesson!</h3> 
 <h4 class="priceshow"><b><span class="whiteprice">Price:</span> $100 (per person)</b> <span class="includes">Includes:</span></h4> 
@@ -120,7 +121,7 @@
 
          
 <div id="directions"><h1 class="marketing_header26">Directions:</h1>
-<p id="test1"><span class="greenp"> Directions from Santa Barbara:</span> If your coming from SB, take 101South then drive past Capinteria and take the Seacliff exit ( Exit 78).  Make a right at the stop sign, drive for 10 minutes south, you will past two state parks (Hobsons and Faria).  After you past the Faria State Park, you will park at the beginning of the w 500 yard gap in between the houses is, it comes up quickly after Faria State park,  this is Mondos Cove.  The meeting spot is the where the gap begins (west end), please pull safely to the middle of the highway and find parking on the left side of the road next to the railroad tracks.  Please be very careful for traffic and bicyclist when crossing the road.
+<p id="test1"><span class="greenp"> Directions from Santa Barbara:</span> If your coming from SB, take the 101 South Freeway then drive past Capinteria and take the Seacliff exit ( Exit 78).  Make a right at the stop sign, drive for 10 minutes south, you will past two state parks (Hobsons and Faria).  After you past the Faria State Park, you will park at the beginning of the w 500 yard gap in between the houses is, it comes up quickly after Faria State park,  this is Mondos Cove.  The meeting spot is the where the gap begins (west end), please pull safely to the middle of the highway and find parking on the left side of the road next to the railroad tracks.  Please be very careful for traffic and bicyclist when crossing the road.
 
 <br /> <br /><span class="greenp"> Directions from Ventura:</span> If your coming for Ventura way, take the State Beach exit after you past Ventura, do not miss it. Drive 5 minutes north, you will past Solimar state beach and then look for the 300 yard gap in between the houses.  This is Mondos Cove and the meeting spot is the west end of the gap, please park safely on the right hand side of the highway next to the railroad tracks.
 <br /> <br /><span class="bringp">Things to bring:</span> Wear your bathing suit under your clothes before you get to the beach and bring a towel, sun glasses, hat and sunblock (recommended Badger surf screen, can be brought at Whole Foods).  Please call or email the night before your lesson to confirm.  When it’s time to meet up at Mondo’s Cove and you are at the meeting spot, please give us a call to help you find your surf lesson quickly.</p>
