--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
 <title>Photo Gallery | Pike&#039;s Surf School | Santa Barbara & Santa Cruz - California</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="keywords" content="Surf lesson photos, Kelly Slater, Bobby Martinez, Santa Barbara" />
-<meta name="description" content="These photos capture the stoked feeling our customers experience after a lesson. Enjoy. " />
+<meta name="description" content="These photos capture the stoked feeling our customers experience after a surf lesson in Santa Barbara and Santa Cruz, California. Enjoy. " />
 <meta name="viewport" content="width=1351">
 <!-- Magnific Popup core CSS file -->
 <link rel="icon" href="/ico/pike_surf_favicon.ico" type="image/x-icon">
@@ -36,7 +36,7 @@
 <div id="templatemo_header_wrapper">
 
   <div id="templatemo_header">
-<div id="templatemo_menu_wrapper"><a href="/index.html"><img src="/images/pikesurflogo.png" alt="logo"  id="companylogo"/></a>
+<div id="templatemo_menu_wrapper"><a href="/index.html"><img src="/images/logo23.png" alt="logo"  id="companylogo"/></a>
 
     <div id="templatemo_menu">
     
@@ -71,7 +71,7 @@
 <div id="templatemo_content_wrapper"><img src="/images/cc7.jpg" alt="logo"  id="about_background3"/>
 	<div id="templatemo_content69">
  <h1 class="marketing_header9">Lesson Photos :)</h1>
-<p id="test2"><span class="brightp">Below are some photos taken during surf lessons in Santa Barbara & Santa Cruz, California. Feel free to check</span> them out and remember! It could soon be YOU riding your first wave and posing in one of these photos! :)   </p>
+<p id="test2"><span class="lightp">Below are some photos taken during surf lessons in Santa Barbara & Santa Cruz, California. Feel free to check</span> them out and remember! It could soon be YOU riding your first wave and posing in one of these photos! :)   </p>
 <div id="imagegroup">
 		<div class="popup-gallery">
 	
