--- a/links.html
+++ b/links.html
@@ -20,7 +20,7 @@
 <div id="templatemo_header_wrapper">
 
   <div id="templatemo_header">
-<div id="templatemo_menu_wrapper"><a href="/index.html"><img src="/images/pikesurflogo.png" alt="logo"  id="companylogo"/></a>
+<div id="templatemo_menu_wrapper"><a href="/index.html"><img src="/images/logo23.png" alt="logo"  id="companylogo"/></a>
 
     <div id="templatemo_menu">
     
