--- a/lessons.html
+++ b/lessons.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Surf Lessons | Pike&#039;s Surf School | Santa Barbara & Santa Cruz, California  </title>
+<title>Surf Lessons | Pike&#039;s Surf Academy- Santa Barbara & Santa Cruz's Ultimate Surf Lessons  </title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="keywords" content="Santa Barbara Surfing, learn to surf" />
 <meta name="description" content="James Pike has been teaching surfing lessons for over 12 years and is both CPR and First Aid Certified." />
