--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Photo Gallery | Pike&#039;s Surf School | Santa Barbara & Santa Cruz - California</title>
+<title>Photo Gallery | Pike&#039;s Surf Academy- Santa Barbara & Santa Cruz's Ultimate Surf Lessons</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="keywords" content="Surf lesson photos, Kelly Slater, Bobby Martinez, Santa Barbara" />
 <meta name="description" content="These photos capture the stoked feeling our customers experience after a surf lesson in Santa Barbara and Santa Cruz, California. Enjoy. " />
@@ -71,7 +71,7 @@
 <div id="templatemo_content_wrapper"><img src="/images/cc7.jpg" alt="logo"  id="about_background3"/>
 	<div id="templatemo_content69">
  <h1 class="marketing_header9">Lesson Photos :)</h1>
-<p id="test2"><span class="lightp">Below are some photos taken during surf lessons in Santa Barbara & Santa Cruz, California. Feel free to check</span> them out and remember! It could soon be YOU riding your first wave and posing in one of these photos! :)   </p>
+<p id="test2"><span class="lightp">Below are some photos taken during surf lessons in Santa Barbara & Santa Cruz, California.</span>  Feel free to check em' out and remember! It could soon be <span class="brightp">YOU riding your first wave</span> and posing in one of these photos! :)   </p>
 <div id="imagegroup">
 		<div class="popup-gallery">
 	
